[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "biomedkai"
version = "1.2.0"
description = "BioMed-KAI: modular, config-first agentic RAG for biomedical QA"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"                           # SPDX string (fixes the warning)
authors = [{ name = "chemplusx" }]

dependencies = [
  "typer>=0.12",
  "pydantic>=2.7",
  "omegaconf>=2.3.0",
  "sentence-transformers>=3.0.1",
  "networkx>=3.2",
  "numpy>=1.26",
  "pandas>=2.2",
  "evaluate>=0.4.1",
  "bert-score>=0.3.13",
  "fastapi>=0.111",
  "uvicorn>=0.30.0",
  "neo4j>=5.20.0",
  "python-dotenv>=1.0",
  "aiohttp>=3.9.1",
  "asyncpg>=0.29.0",
  "beautifulsoup4>=4.12.2",
  "biopython>=1.83",
  "chromadb>=0.4.22",
  "click>=8.1.7",
  "cryptography>=41.0.7",
  "faiss-cpu>=1.7.4",
  "httpx>=0.26.0",
  "jwt>=1.4.0",
  "langchain-community>=0.1.0",
  "langchain>=0.1.0",
  "langgraph>=0.2.0",
  "langsmith>=0.0.87",
  "newspaper3k>=0.2.8",
  "opentelemetry-api>=1.22.0",
  "opentelemetry-instrumentation-fastapi>=0.43b0",
  "opentelemetry-sdk>=1.22.0",
  "passlib[bcrypt]>=1.7.4",
  "pgvector>=0.2.4",
  "prometheus-client>=0.19.0",
  "pymongo>=4.6.1",
  "pytest-asyncio>=0.23.3",
  "pytest-cov>=4.1.0",
  "pytest>=7.4.4",
  "python-jose[cryptography]>=3.3.0",
  "python-multipart>=0.0.6",
  "pyyaml>=6.0.1",
  "rank_bm25>=0.2.2",
  "redis>=5.0.1",
  "rich>=13.7.0",
  "scholarly>=1.7.11",
  "sentence-transformers>=2.3.1",
  "spacy>=3.6",
  "en-core-sci-md @ https://s3-us-west-2.amazonaws.com/ai2-s2-scispacy/releases/v0.5.4/en_core_sci_md-0.5.4.tar.gz",
  "en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0.tar.gz",
  "structlog>=24.1.0",
  "tenacity>=8.2.3",
  "transformers>=4.37.0",
  "uvicorn>=0.25.0",
  "websockets>=12.0"
]

[project.optional-dependencies]
# Choose ONE of these on your machine:
#llamacpp-cpu   = ["llama-cpp-python>=0.2.90"]
#llamacpp-cu121 = ["llama-cpp-python-cu121>=0.2.90"]
#llamacpp-cu122 = ["llama-cpp-python-cu122>=0.2.90"]
llamacpp-cu124 = ["llama-cpp-python-cu124>=0.2.90"]
#llamacpp-rocm  = ["llama-cpp-python-rocm>=0.2.90"]

[project.scripts]
biomedkai = "biomedkai.cli:app"
biomedkai-gpu = "biomedkai.gpu:app"   # optional alias
biomedkai-api = "biomedkai_api.main:run"
biomedkai-api-debug = "biomedkai_api.main:run" 

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["biomedkai*", "biomedkai_api*"]
exclude = ["tests*", "docker*", "apps*", "scripts*"]


[tool.setuptools.package-data]
# ship default config inside the package
"biomedkai.configs" = ["*.yaml"]
